--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+  <script type="text/javascript" src="bundle.js"></script></body>
 </html>
