--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <script src="http://api.map.baidu.com/api?v=2.0&ak=njB8sjjhXrjCGyqYoSfa6QM70sjGrTA3"></script>
+    <script src="https://api.map.baidu.com/api?v=2.0&ak=njB8sjjhXrjCGyqYoSfa6QM70sjGrTA3"></script>
     <title>chart_zhaopin</title>
   </head>
   <body>
